chapter 5 templates, interpolation and directives - done

--- a/APM-Start/.vscode/settings.json
+++ b/APM-Start/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "files.autoSave": "afterDelay",
-  "html.format.wrapAttributes": "force-aligned"
+  "html.format.wrapAttributes": "force-aligned",
+  "html.format.enable": false,
+  "html.format.preserveNewLines": false
 }
